# SplitWG

./: .gitignore  CHANGELOG.md  Cargo.toml  Info.plist  LICENSE  Makefile  README.md  build.rs  splitwg.entitlements
.cargo/: config.toml
.github/workflows/: GeoLite.yml  ci.yml  release-windows.yml  release.yml
Contents/: Info.plist
Contents/_CodeSignature/: CodeResources
Geolite-DB/: SHA256SUMS  UPDATED_AT
icon/: splitwg.icns
installer/: splitwg.nsi
locales/: en.json  tr.json
relay/: Cargo.toml
relay/src/: auth.rs  camouflage.rs  config.rs  main.rs  session.rs
resources/: splitwg.pub
scripts/: make-dmg.sh  minisign-keygen.sh
src/: ipc.rs  lib.rs  main.rs
src/auth/: hello_windows.rs  mod.rs  polkit_linux.rs  setup_darwin.rs  setup_linux.rs  setup_windows.rs  touchid.rs  touchid_darwin.rs
src/config/: mod.rs
src/gui/: activation.rs  app.rs  detail_panel.rs  geodb.rs  log_tail.rs  login_item.rs  login_item_linux.rs  login_item_windows.rs  mod.rs  modals.rs  network_monitor.rs  network_monitor_darwin.rs  network_monitor_linux.rs  network_monitor_windows.rs  package.rs  qr.rs  sparkline.rs  tasks.rs  theme.rs  tray_host.rs  tunnels_panel.rs  update.rs  url_handler_bridge.m  url_scheme.rs  url_scheme_linux.rs  url_scheme_windows.rs  validation.rs  wg_stat.rs
src/gui/detail/: logs.rs  mod.rs  rules.rs  status.rs  templates.rs
src/i18n/: mod.rs
src/icon/: mod.rs
src/notify/: mod.rs  notify_darwin.rs  notify_linux.rs  notify_windows.rs
src/runtime/: dns.rs  dns_darwin.rs  dns_linux.rs  dns_windows.rs  mod.rs  nft.rs  pf.rs  routing.rs  routing_darwin.rs  routing_linux.rs  routing_windows.rs  timers.rs  transport.rs  wfp.rs  ws_transport.rs
src/service/: installer.rs  mod.rs  pipe_server.rs  unix_server.rs
src/wg/: admin_darwin.rs  admin_linux.rs  conf.rs  manager.rs  mod.rs  on_demand.rs  rules.rs  wgbin_darwin.rs  wgbin_linux.rs
src/wg/rules/: geo.rs
