[package]
name = "splitwg"
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
description = "Minimal macOS WireGuard tray app with per-config split tunneling"
license = "MIT"
build = "build.rs"

[[bin]]
name = "splitwg"
path = "src/main.rs"

[[bin]]
name = "splitwg-helper"
path = "src/bin/helper.rs"

[lib]
name = "splitwg"
path = "src/lib.rs"

[dependencies]
eframe         = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "persistence"] }
egui           = "0.29"
egui_extras    = { version = "0.29", features = ["image"] }
rfd            = { version = "0.15", default-features = false, features = ["xdg-portal"] }
dark-light     = "1"
tray-icon      = "0.22"
muda           = "0.17"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
dirs           = "6"
log            = "0.4"
regex          = "1"
anyhow         = "1"
thiserror      = "2"
once_cell      = "1"
image          = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
rqrr           = "0.10"
zip            = { version = "8", default-features = false, features = ["aes-crypto", "deflate"] }
smappservice-rs = "0.1"
objc2-core-wlan = "0.3"
ipnet          = "2.12"
base64         = "0.22"
tokio          = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "io-std", "macros", "signal", "process"] }
objc2                      = "0.6"
objc2-foundation           = { version = "0.3", features = ["NSString", "NSError"] }
objc2-app-kit              = { version = "0.3", features = ["NSApplication", "NSResponder", "NSPasteboard"] }
objc2-local-authentication = { version = "0.3", features = ["LAContext", "LAError", "block2"] }
block2                     = "0.6"
boringtun                  = "0.7"
tun2                       = { version = "4", features = ["async"] }
x25519-dalek               = "2"
socket2                    = "0.5"
libc                       = "0.2"
maxminddb                  = "0.24"
ipnetwork                  = "0.20"
ureq                       = { version = "3", default-features = false, features = ["rustls"] }
semver                     = "1"
minisign-verify            = "0.2"
sha2                       = "0.10"
hex                        = "0.4"

[dev-dependencies]
tokio          = { version = "1", features = ["test-util"] }

[build-dependencies]
cc             = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
