[package]
name = "splitwg"
version = "1.1.1"
edition = "2021"
rust-version = "1.88"
description = "Minimal macOS WireGuard tray app with per-config split tunneling"
license = "MIT"
build = "build.rs"

[[bin]]
name = "splitwg"
path = "src/main.rs"

[[bin]]
name = "splitwg-helper"
path = "src/bin/helper.rs"

[[bin]]
name = "splitwg-svc"
path = "src/bin/service.rs"

[lib]
name = "splitwg"
path = "src/lib.rs"

[dependencies]
eframe         = { version = "0.29", default-features = false, features = ["default_fonts", "wgpu", "persistence", "x11", "wayland"] }
egui           = "0.29"
egui_extras    = { version = "0.29", features = ["image"] }
rfd            = { version = "0.15", default-features = false, features = ["xdg-portal"] }
dark-light     = "1"
tray-icon      = "0.22"
muda           = "0.17"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
dirs           = "6"
log            = "0.4"
regex          = "1"
anyhow         = "1"
thiserror      = "2"
once_cell      = "1"
image          = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "tiff"] }
rqrr           = "0.10"
zip            = { version = "8", default-features = false, features = ["aes-crypto", "deflate"] }
ipnet          = "2.12"
base64         = "0.22"
tokio          = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "io-std", "macros", "signal", "process"] }
gotatun                    = "0.5"
tun2                       = { version = "4", features = ["async"] }
x25519-dalek               = "2"
socket2                    = "0.5"
libc                       = "0.2"
maxminddb                  = "0.27"
ipnetwork                  = "0.21"
ureq                       = { version = "3", default-features = false, features = ["rustls"] }
semver                     = "1"
minisign-verify            = "0.2"
sha2                       = "0.10"
hex                        = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
smappservice-rs            = "0.1"
objc2-core-wlan            = "0.3"
objc2                      = "0.6"
objc2-foundation           = { version = "0.3", features = ["NSString", "NSError"] }
objc2-app-kit              = { version = "0.3", features = ["NSApplication", "NSResponder", "NSPasteboard"] }
objc2-local-authentication = { version = "0.3", features = ["LAContext", "LAError", "block2"] }
block2                     = "0.6"

[target.'cfg(windows)'.dependencies]
windows-service            = "0.7"
winreg                     = "0.55"
windows                    = { version = "0.58", features = ["Security_Credentials_UI", "Win32_Security", "Win32_Foundation", "Win32_System_Pipes"] }

[dev-dependencies]
tokio          = { version = "1", features = ["test-util"] }

[build-dependencies]
cc             = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"
