[package]
name = "splitwg-relay"
version = "0.1.0"
edition = "2021"
description = "WebSocket-to-UDP relay for SplitWG obfuscation"
license = "MIT"

[[bin]]
name = "splitwg-relay"
path = "src/main.rs"

[dependencies]
axum       = { version = "0.8", features = ["ws"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
toml       = "0.8"
log          = "0.4"
env_logger   = "0.11"
anyhow       = "1"
argon2        = { version = "0.5", features = ["rand"] }
password-hash = { version = "0.5", features = ["getrandom"] }
futures-util = "0.3"
tower-http   = { version = "0.6", features = ["fs", "set-header"] }
